syntax = "proto3";

package auth;

service AdminService {

    rpc SignIn (User) returns (SignInResponse) {}
    rpc Verify (Token) returns (Status) {}
   
}

message SignInResponse {
    oneof response {
        string token = 1;
        string error = 2;
    }
}

message User {
    int32 id = 1;
    string username = 2;
    string password = 3;
    string role = 4;
}

message Token {
    string token = 1;
}

message Status {
    bool value = 1;
    string role = 2;
}

message Error {
    string message = 1;
}
